<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        tools:context=".login.ui.LoginActivity">

        <ImageView
            android:layout_width="106dp"
            android:layout_height="106dp"
            android:layout_marginTop="74dp"
            android:src="@drawable/oktested_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/signUp_login"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fbLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/facebookLL"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/fb_background"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="#293F69">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/ic_facebook" />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/facebook"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/googleLL"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/google_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@color/colorWhite">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/ic_google" />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/google"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="or"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/login_mobile_bg"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="+91 "
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/trans_bg_play" />

            <EditText
                android:id="@+id/mobileET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/mobile"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:text="@string/signup_here"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spinKit"
        style="@style/SpinKitView.ThreeBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorPrimary" />
</RelativeLayout>